services/app/src/components/gameFooter/chess-board-pieces.css
/*-----Chess Board Pieces-----*/
#chess-pieces-container {
  width: 100%;
  display: flex;
  justify-content: space-evenly;
  user-select: none;
  height: auto;
  position: relative;
}

.figure-info {
  position: absolute;
  top: calc(100% + 5px); /* adjust this value as needed */
}

.piece-field {
  width: clamp(56px, 6vh, 70px);
  aspect-ratio: 1 / 2;
  flex-direction: column;
  border: 2px solid transparent;
  cursor: pointer;
  border-radius: 4px;
  background: none;
}

.piece-field:hover {
  background-color: var(--chess-tile-light);
}

.piece-field-selected {
  background-color: var(--chess-tile-light);
  border-color: var(--game-light-purple);
}

.piece-field.disabled {
  cursor: not-allowed;
}

.figure-img {
  height: 35%;
}

.figure-title {
  color: var(--primary-text);
  line-height: 2rem;
  letter-spacing: 0.3px;
  margin-block-start: 0.2em;
  margin-block-end: 0;
}

.figure-strength-container {
  width: 2.5em;
  height: 24px;
  background-color: var(--primary);
}

.figure-strength-container p {
  color: var(--white);
  letter-spacing: -0.1px;
}

